--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </body>
 
     <script src="index.js"></script>
+    <!-- coucou -->
     <!-- If you start other by JS index : <script src="worker-bundle.js"></script> -->
 </html>
 <!-- END -->
